cmake_minimum_required(VERSION 3.20)
project(codingArt)

set(CMAKE_CXX_STANDARD 14)

add_executable(codingArt
        exp2/EightQueensPlus.cpp
#        exp3/straddle.cpp
#        exp5/roboWalk.cpp
#        exp5/password.cpp
#        exp3/crossHouse.cpp
#        exp4/LCS.cpp
#        exp4/strOperation.cpp
        )
